cabal-version:      2.4
name:               lower
version:            0.1.0.0

synopsis: Lowering a surface syntax into different intermediate representations
-- description: (A longer description of the package.)

-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brian Schroeder
maintainer:         bts@gmail.com

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lower
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
